<resources>
    <string name="app_name">FavouriteToys</string>
    <string name="enter_a_query">Enter a query</string>
    <string name="yrsearchllshwhr">Your search URL will show up here</string>
    <string name="pshtsrch">Push to search</string>
    <string name="search">Search</string>
    <string name="error_message">Failed to get results, please try again.</string>
    <string name="defaultText">This is default text. Hopefully it changes.</string>
    <string name="send">Send</string>

    <!-- Label for the color preference -->
    <string name="pref_color_label">Shape Color</string>

    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_Blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <!-- Key for color preference-->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="action_settings">Settings</string>

    <!-- Add Strings for check box preference -->
    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <string name="pref_show_mid_label">Show Mid</string>
    <string name="pref_show_mid_key" translatable="false">show_mid</string>

    <string name="pref_show_treble_label">Show Treble</string>
    <string name="pref_show_treble_key">show_treble</string>

    <string name="pref_show_true">Show</string>
    <string name="pref_show_false">Hidden</string>

    <string name="pref_size_default" translatable="false">1</string>
    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_size_title">Size Multiplier</string>
</resources>
