<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        app:defaultValue="@bool/press_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_bass_label"/>

    <CheckBoxPreference
        app:defaultValue="@bool/press_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOn="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/pref_show_mid_label"/>

    <CheckBoxPreference
        app:defaultValue="@bool/press_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOn="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/pref_show_treble_label"/>

</PreferenceScreen>